--- a/omod/src/main/webapp/resources/styles/modalitylist.css
+++ b/omod/src/main/webapp/resources/styles/modalitylist.css
@@ -15,6 +15,7 @@
 background-color: gainsboro;
 float: left;
 font-size: 20px;
+padding: 8px;
 
 }
 
@@ -23,6 +24,7 @@ font-size: 20px;
     width: 50%;
     margin-left: 153px;
     text-align: center;
+    padding: 8px;
   
 
 }
@@ -43,4 +45,8 @@ label {
 .modality-list-btn {
     margin-top: 54px;
     padding-bottom: 13px;
+}
+
+#select-modality {
+    width: 240px;
 }
